# embassy-rp2040-template

./: Cargo.toml  README.md  cargo-generate.toml
src/: main.rs
