[package]
edition = "2021"
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
resolver = "2"

[dependencies]
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "intrinsics", "rom-v2-intrinsics"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2
